Create authentiction for server Create mongo db services Create middleware Create routes

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"outDir": "./build",
 		"sourceMap": true,
-		"noImplicitAny": true,
+		"noImplicitAny": false,
 		"module": "commonjs",
 		"experimentalDecorators": true,
 		"target": "es6",
@@ -19,7 +19,10 @@
 			"convict",
 			"jest",
 			"koa-mount",
-			"koa-json"
+			"koa-json",
+			"mongodb",
+			"co-body",
+			"jsonwebtoken"
 		]
 	},
 	"include": [
