--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:server": "npm run clean:server && node_modules/.bin/tsc --p tsconfig.server.json && npm run copy:keys",
     "use:node": "nvm use v7.8.0",
-		"start:server": "node ./build",
-		"clean:server": "node_modules/.bin/rimraf build/",
-    "copy:keys": "node_modules/.bin/copyfiles -u 1 server/keys/* build/"
+    "start:server": "node ./build",
+    "clean:server": "node_modules/.bin/rimraf build/",
+    "copy:keys": "node_modules/.bin/copyfiles -u 1 server/keys/* build/ && node_modules/.bin/copyfiles -u 1 server/authentication/secret/* build/"
   },
   "repository": {
     "type": "git",
@@ -29,12 +29,15 @@
   },
   "homepage": "https://github.com/vanluke/the-app-with-a-style#readme",
   "devDependencies": {
+    "@types/co-body": "0.0.1",
     "@types/convict": "^4.0.0",
     "@types/jest": "^20.0.2",
+    "@types/jsonwebtoken": "^7.2.2",
     "@types/koa": "^2.0.39",
     "@types/koa-json": "^2.0.16",
     "@types/koa-mount": "^2.0.18",
     "@types/koa-router": "^7.0.22",
+    "@types/mongodb": "^2.2.7",
     "@types/node": "^8.0.10",
     "autoprefixer": "^7.1.1",
     "awesome-typescript-loader": "^3.2.1",
@@ -106,6 +109,7 @@
     "koa-router": "^7.2.1",
     "koa-sslify": "^2.1.2",
     "koa-static": "^4.0.1",
+    "mongodb": "^2.2.30",
     "redux": "^3.7.1",
     "redux-observable": "^0.14.1",
     "seamless-immutable": "^7.1.2"
