--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "webpack-hot-middleware": "^2.18.1"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "co-body": "^5.1.1",
     "convict": "^4.0.0",
     "jsonwebtoken": "^7.4.1",
