Initialize client side project

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
 		"babel",
 		"json"
 	],
-	"extends": "airbnb",
+	"extends": ["airbnb", "stylelint"],
 	"parser": "babel-eslint",
 	"parserOptions": {
 		"ecmaFeatures": {
