--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "precss": "^2.0.0",
     "react-addons-test-utils": "^15.6.0",
     "react-hot-loader": "^3.0.0-beta.6",
+    "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.2.3",
     "rimraf": "^2.6.1",
@@ -109,6 +110,7 @@
     "bcrypt": "^1.0.2",
     "co-body": "^5.1.1",
     "convict": "^4.0.0",
+    "history": "^4.6.3",
     "jsonwebtoken": "^7.4.1",
     "koa": "^2.3.0",
     "koa-body": "^2.3.0",
@@ -126,8 +128,10 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "redux": "^3.7.1",
     "redux-observable": "^0.14.1",
+    "redux0-helpers": "^1.0.0",
     "rxjs": "^5.4.2",
     "seamless-immutable": "^7.1.2",
     "styled-components": "^2.1.1",
