--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.1",
+    "redux-form": "^7.0.3",
     "redux-observable": "^0.14.1",
     "redux0-helpers": "^1.0.0",
     "rxjs": "^5.4.2",
