--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "convict": "^4.0.0",
     "history": "^4.6.3",
     "jsonwebtoken": "^7.4.1",
+    "jwt-decode": "^2.2.0",
     "koa": "^2.3.0",
     "koa-body": "^2.3.0",
     "koa-cors": "0.0.16",
@@ -122,6 +123,7 @@
     "koa-router": "^7.2.1",
     "koa-sslify": "^2.1.2",
     "koa-static": "^4.0.1",
+    "lockr": "^0.8.4",
     "mongodb": "^2.2.30",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
