Signup cleanup Add server and client validation

--- a/package.json
+++ b/package.json
@@ -124,9 +124,11 @@
     "koa-sslify": "^2.1.2",
     "koa-static": "^4.0.1",
     "lockr": "^0.8.4",
+    "moment": "^2.18.1",
     "mongodb": "^2.2.30",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-datepicker": "^0.52.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
