--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "react-datepicker": "^0.52.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
+    "react-redux-toastr": "^7.1.5",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.1",
